2013-12-20  Per Bothner  <per@bothner.com>

	* UnboundLocationException.java: Tweak message formatting.

2013-12-02  Per Bothner  <per@bothner.com>

	* Promise.java (force(Object,Class)): New method.

2013-11-28  Per Bothner  <per@bothner.com>

	* BinaryOutPort.java (makeStandardPort, openFile): Don't need to
	allocate a BufferedWriter, since PrettyWriter does buffering.

2013-11-27  Per Bothner  <per@bothner.com>

	* BinaryOutPort.java: Avoid dependency on Java 7 class
	java.nio.charset.StandardCharsets.

2013-11-24  Per Bothner  <per@bothner.com>

	* BinaryOutPort.java: Generalize the text-port aspect so the
	text concoding can be other than just Latin1, with optimized
	non-buffering support for UTF-8.
	(class OutputStreamWriterLatin1): Rename to OutputStreamWriterSimple
	since it now also supports UTF-8.
	* OutPort.java (outInitial, errInitial): Change these to
	BinaryOutPorts.

	* InPort.java (openFile): Allow conversion specifier to be a
	Charset or a CharsetDecoder.

2013-11-13  Per Bothner  <per@bothner.com>

	* CharArrayInPort.java (<init>): New constructor taking FString.
	(make): Make method static.  Use new constructor.

2013-11-03  Per Bothner  <per@bothner.com>

	* Values.java: Change to an abstract class that extends
	AbstractSequence rather than TreeList.
	(class FromArray): Values implementation using an array.
	(class FromList): Values implementation using a java.util.List.
	(class Values): Values implementation using two fields.
	(class FromTreeList): Values implementation using a TreeList;
	* ValueStack.java: Change to extend Values.FromTreeList.
	This means TreeList access needs indirection via the buffer field.
	Also, no longer implement Sequence.
	(clear): Update accordingly.
	* CallContext.java (startFromContext, getFromContext,
	cleanupFromContext, runUntilValue): Update accordingly.

	* ValueStack.java: Add generic parameter.

2013-09-07  Per Bothner  <per@bothner.com>

	* MethodProc.java (overrideEquivalent): New method.